# cursor-machine-id-resetter

./: BACKUP_FEATURE.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  GITHUB_ACTIONS_FIX.md  GITHUB_ACTIONS_README.md  GITHUB_SETUP_COMPLETE.md  ICON_CONVERSION_GUIDE.md  LICENSE  PACKAGING_FIX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_GUIDE.md  build-linux.sh  build-macos.sh  build-windows.bat  build-windows.ps1  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  使用说明.md  手动配置NSIS.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
src/: App.vue  env.d.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  README.md
src-tauri/src/: commands.rs  main.rs  qoder_commands.rs
src-tauri/src/core/: account_history.rs  backup.rs  cache_cleaner.rs  cursor_quitter.rs  database_cleaner.rs  email_generator.rs  id_generator.rs  ide_config.rs  ide_resetter.rs  mod.rs  patcher.rs  resetter.rs  settings.rs  system.rs  telemetry_modifier.rs
src-tauri/src/core/qoder/: hardware_faker.rs  mod.rs  qoder_cleaner.rs  qoder_paths.rs  qoder_process.rs  qoder_resetter.rs
src-tauri/src/utils/: logger.rs  mod.rs  paths.rs
src/components/: EmailGeneratorPanel.vue  IDESelector.vue  LogsPanel.vue  QoderPanel.vue  ResetPanel.vue  RestorePanel.vue  SettingsPanel.vue
src/i18n/: index.ts
src/i18n/locales/: en.json  zh_cn.json
src/stores/: app.ts  log.ts
src/views/: MainView.vue
