[package]
name = "cursor-machine-id-resetter"
version = "1.0.7"
description = "Cursor Machine ID Reset Tool"
authors = ["yeongpin"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.10", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
md5 = "0.7"
chrono = "0.4"
regex = "1.10"
directories = "5.0"
dirs = "5.0"
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"
sysinfo = "0.31"
walkdir = "2.4"
anyhow = "1.0"
log = "0.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["processthreadsapi", "memoryapi", "handleapi", "tlhelp32"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

